server/controllers/compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    COMMA
    COMMENT
    COMMENT2
    CONSOLE
    DEFAULT
    FUNCTION
    INDEXOF
    JOIN
    KEYS
    LBRACKET
    LENGTH
    LOG
    NULL
    OBJECT
    PARSEFLOAT
    PARSEINT
    POP
    PUSH
    RBRACKET
    SWITCH
    TOLOWERCASE
    TOSTRING
    TOUPPERCASE
    TYPEOF
    VALUES

Grammar

Rule 0     S' -> init
Rule 1     init -> init instruction
Rule 2     init -> empty
Rule 3     init -> instruction
Rule 4     instruction -> assignation SEMICOLON
Rule 5     instruction -> assignation_const SEMICOLON
Rule 6     instruction -> interface
Rule 7     instruction -> if
Rule 8     instruction -> while
Rule 9     instruction -> for
Rule 10    instruction -> foreach
Rule 11    instruction -> break
Rule 12    instruction -> continue
Rule 13    instruction -> return
Rule 14    if -> IF LPAREN exp RPAREN block
Rule 15    if -> IF LPAREN exp RPAREN block ELSE block
Rule 16    if -> IF LPAREN exp RPAREN block ELSE if
Rule 17    while -> WHILE LPAREN exp RPAREN block
Rule 18    for -> FOR LPAREN assignation SEMICOLON exp SEMICOLON assignation RPAREN block
Rule 19    foreach -> FOR LPAREN VAR ID OF ID RPAREN block
Rule 20    break -> BREAK SEMICOLON
Rule 21    continue -> CONTINUE SEMICOLON
Rule 22    return -> RETURN exp SEMICOLON
Rule 23    return -> RETURN SEMICOLON
Rule 24    block -> LBRACE init RBRACE
Rule 25    assignation_const -> CONST ID COLON type EQUAL exp
Rule 26    assignation_const -> CONST ID EQUAL exp
Rule 27    interface -> INTERFACE ID LBRACE interface_body RBRACE
Rule 28    interface_body -> interface_body SEMICOLON ID COLON type
Rule 29    interface_body -> ID COLON type
Rule 30    assignation -> VAR ID COLON type EQUAL exp
Rule 31    assignation -> VAR ID EQUAL exp
Rule 32    assignation -> VAR ID COLON type
Rule 33    assignation -> ID EQUAL exp
Rule 34    assignation -> ID PLUS_EQUAL exp
Rule 35    assignation -> ID MINUS_EQUAL exp
Rule 36    type -> NUMBER
Rule 37    type -> FLOAT
Rule 38    type -> STRING
Rule 39    type -> CHAR
Rule 40    type -> BOOL
Rule 41    exp -> exp PLUS exp
Rule 42    exp -> exp MINUS exp
Rule 43    exp -> exp TIMES exp
Rule 44    exp -> exp DIVIDE exp
Rule 45    exp -> exp MOD exp
Rule 46    exp -> MINUS exp
Rule 47    exp -> NOT exp
Rule 48    exp -> exp COMPARASION exp
Rule 49    exp -> exp DIFFERENT exp
Rule 50    exp -> exp GREATER exp
Rule 51    exp -> exp LESS exp
Rule 52    exp -> exp GREATER_EQUAL exp
Rule 53    exp -> exp LESS_EQUAL exp
Rule 54    exp -> exp AND exp
Rule 55    exp -> exp OR exp
Rule 56    exp -> NUMBER_LEX
Rule 57    exp -> FLOAT_LEX
Rule 58    exp -> STRING_LEX
Rule 59    exp -> CHAR_LEX
Rule 60    exp -> TRUE
Rule 61    exp -> FALSE
Rule 62    exp -> ID
Rule 63    exp -> LPAREN exp RPAREN
Rule 64    exp -> exp QUESTION exp COLON exp
Rule 65    exp -> ID DOT ID
Rule 66    empty -> <empty>

Terminals, with rules where they appear

AND                  : 54
BOOL                 : 40
BREAK                : 20
CASE                 : 
CHAR                 : 39
CHAR_LEX             : 59
COLON                : 25 28 29 30 32 64
COMMA                : 
COMMENT              : 
COMMENT2             : 
COMPARASION          : 48
CONSOLE              : 
CONST                : 25 26
CONTINUE             : 21
DEFAULT              : 
DIFFERENT            : 49
DIVIDE               : 44
DOT                  : 65
ELSE                 : 15 16
EQUAL                : 25 26 30 31 33
FALSE                : 61
FLOAT                : 37
FLOAT_LEX            : 57
FOR                  : 18 19
FUNCTION             : 
GREATER              : 50
GREATER_EQUAL        : 52
ID                   : 19 19 25 26 27 28 29 30 31 32 33 34 35 62 65 65
IF                   : 14 15 16
INDEXOF              : 
INTERFACE            : 27
JOIN                 : 
KEYS                 : 
LBRACE               : 24 27
LBRACKET             : 
LENGTH               : 
LESS                 : 51
LESS_EQUAL           : 53
LOG                  : 
LPAREN               : 14 15 16 17 18 19 63
MINUS                : 42 46
MINUS_EQUAL          : 35
MOD                  : 45
NOT                  : 47
NULL                 : 
NUMBER               : 36
NUMBER_LEX           : 56
OBJECT               : 
OF                   : 19
OR                   : 55
PARSEFLOAT           : 
PARSEINT             : 
PLUS                 : 41
PLUS_EQUAL           : 34
POP                  : 
PUSH                 : 
QUESTION             : 64
RBRACE               : 24 27
RBRACKET             : 
RETURN               : 22 23
RPAREN               : 14 15 16 17 18 19 63
SEMICOLON            : 4 5 18 18 20 21 22 23 28
STRING               : 38
STRING_LEX           : 58
SWITCH               : 
TIMES                : 43
TOLOWERCASE          : 
TOSTRING             : 
TOUPPERCASE          : 
TRUE                 : 60
TYPEOF               : 
VALUES               : 
VAR                  : 19 30 31 32
WHILE                : 17
error                : 

Nonterminals, with rules where they appear

assignation          : 4 18 18
assignation_const    : 5
block                : 14 15 15 16 17 18 19
break                : 11
continue             : 12
empty                : 2
exp                  : 14 15 16 17 18 22 25 26 30 31 33 34 35 41 41 42 42 43 43 44 44 45 45 46 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 63 64 64 64
for                  : 9
foreach              : 10
if                   : 7 16
init                 : 1 24 0
instruction          : 1 3
interface            : 6
interface_body       : 27 28
return               : 13
type                 : 25 28 29 30 32
while                : 8

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . init instruction
    (2) init -> . empty
    (3) init -> . instruction
    (66) empty -> .
    (4) instruction -> . assignation SEMICOLON
    (5) instruction -> . assignation_const SEMICOLON
    (6) instruction -> . interface
    (7) instruction -> . if
    (8) instruction -> . while
    (9) instruction -> . for
    (10) instruction -> . foreach
    (11) instruction -> . break
    (12) instruction -> . continue
    (13) instruction -> . return
    (30) assignation -> . VAR ID COLON type EQUAL exp
    (31) assignation -> . VAR ID EQUAL exp
    (32) assignation -> . VAR ID COLON type
    (33) assignation -> . ID EQUAL exp
    (34) assignation -> . ID PLUS_EQUAL exp
    (35) assignation -> . ID MINUS_EQUAL exp
    (25) assignation_const -> . CONST ID COLON type EQUAL exp
    (26) assignation_const -> . CONST ID EQUAL exp
    (27) interface -> . INTERFACE ID LBRACE interface_body RBRACE
    (14) if -> . IF LPAREN exp RPAREN block
    (15) if -> . IF LPAREN exp RPAREN block ELSE block
    (16) if -> . IF LPAREN exp RPAREN block ELSE if
    (17) while -> . WHILE LPAREN exp RPAREN block
    (18) for -> . FOR LPAREN assignation SEMICOLON exp SEMICOLON assignation RPAREN block
    (19) foreach -> . FOR LPAREN VAR ID OF ID RPAREN block
    (20) break -> . BREAK SEMICOLON
    (21) continue -> . CONTINUE SEMICOLON
    (22) return -> . RETURN exp SEMICOLON
    (23) return -> . RETURN SEMICOLON

  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for INTERFACE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    $end            reduce using rule 66 (empty -> .)
    VAR             shift and go to state 14
    ID              shift and go to state 15
    CONST           shift and go to state 16
    INTERFACE       shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    RETURN          shift and go to state 23

  ! VAR             [ reduce using rule 66 (empty -> .) ]
  ! ID              [ reduce using rule 66 (empty -> .) ]
  ! CONST           [ reduce using rule 66 (empty -> .) ]
  ! INTERFACE       [ reduce using rule 66 (empty -> .) ]
  ! IF              [ reduce using rule 66 (empty -> .) ]
  ! WHILE           [ reduce using rule 66 (empty -> .) ]
  ! FOR             [ reduce using rule 66 (empty -> .) ]
  ! BREAK           [ reduce using rule 66 (empty -> .) ]
  ! CONTINUE        [ reduce using rule 66 (empty -> .) ]
  ! RETURN          [ reduce using rule 66 (empty -> .) ]

    init                           shift and go to state 1
    instruction                    shift and go to state 2
    empty                          shift and go to state 3
    assignation                    shift and go to state 4
    assignation_const              shift and go to state 5
    interface                      shift and go to state 6
    if                             shift and go to state 7
    while                          shift and go to state 8
    for                            shift and go to state 9
    foreach                        shift and go to state 10
    break                          shift and go to state 11
    continue                       shift and go to state 12
    return                         shift and go to state 13

state 1

    (0) S' -> init .
    (1) init -> init . instruction
    (4) instruction -> . assignation SEMICOLON
    (5) instruction -> . assignation_const SEMICOLON
    (6) instruction -> . interface
    (7) instruction -> . if
    (8) instruction -> . while
    (9) instruction -> . for
    (10) instruction -> . foreach
    (11) instruction -> . break
    (12) instruction -> . continue
    (13) instruction -> . return
    (30) assignation -> . VAR ID COLON type EQUAL exp
    (31) assignation -> . VAR ID EQUAL exp
    (32) assignation -> . VAR ID COLON type
    (33) assignation -> . ID EQUAL exp
    (34) assignation -> . ID PLUS_EQUAL exp
    (35) assignation -> . ID MINUS_EQUAL exp
    (25) assignation_const -> . CONST ID COLON type EQUAL exp
    (26) assignation_const -> . CONST ID EQUAL exp
    (27) interface -> . INTERFACE ID LBRACE interface_body RBRACE
    (14) if -> . IF LPAREN exp RPAREN block
    (15) if -> . IF LPAREN exp RPAREN block ELSE block
    (16) if -> . IF LPAREN exp RPAREN block ELSE if
    (17) while -> . WHILE LPAREN exp RPAREN block
    (18) for -> . FOR LPAREN assignation SEMICOLON exp SEMICOLON assignation RPAREN block
    (19) foreach -> . FOR LPAREN VAR ID OF ID RPAREN block
    (20) break -> . BREAK SEMICOLON
    (21) continue -> . CONTINUE SEMICOLON
    (22) return -> . RETURN exp SEMICOLON
    (23) return -> . RETURN SEMICOLON

    VAR             shift and go to state 14
    ID              shift and go to state 15
    CONST           shift and go to state 16
    INTERFACE       shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    RETURN          shift and go to state 23

    instruction                    shift and go to state 24
    assignation                    shift and go to state 4
    assignation_const              shift and go to state 5
    interface                      shift and go to state 6
    if                             shift and go to state 7
    while                          shift and go to state 8
    for                            shift and go to state 9
    foreach                        shift and go to state 10
    break                          shift and go to state 11
    continue                       shift and go to state 12
    return                         shift and go to state 13

state 2

    (3) init -> instruction .

    VAR             reduce using rule 3 (init -> instruction .)
    ID              reduce using rule 3 (init -> instruction .)
    CONST           reduce using rule 3 (init -> instruction .)
    INTERFACE       reduce using rule 3 (init -> instruction .)
    IF              reduce using rule 3 (init -> instruction .)
    WHILE           reduce using rule 3 (init -> instruction .)
    FOR             reduce using rule 3 (init -> instruction .)
    BREAK           reduce using rule 3 (init -> instruction .)
    CONTINUE        reduce using rule 3 (init -> instruction .)
    RETURN          reduce using rule 3 (init -> instruction .)
    $end            reduce using rule 3 (init -> instruction .)
    RBRACE          reduce using rule 3 (init -> instruction .)


state 3

    (2) init -> empty .

    VAR             reduce using rule 2 (init -> empty .)
    ID              reduce using rule 2 (init -> empty .)
    CONST           reduce using rule 2 (init -> empty .)
    INTERFACE       reduce using rule 2 (init -> empty .)
    IF              reduce using rule 2 (init -> empty .)
    WHILE           reduce using rule 2 (init -> empty .)
    FOR             reduce using rule 2 (init -> empty .)
    BREAK           reduce using rule 2 (init -> empty .)
    CONTINUE        reduce using rule 2 (init -> empty .)
    RETURN          reduce using rule 2 (init -> empty .)
    $end            reduce using rule 2 (init -> empty .)
    RBRACE          reduce using rule 2 (init -> empty .)


state 4

    (4) instruction -> assignation . SEMICOLON

    SEMICOLON       shift and go to state 25


state 5

    (5) instruction -> assignation_const . SEMICOLON

    SEMICOLON       shift and go to state 26


state 6

    (6) instruction -> interface .

    VAR             reduce using rule 6 (instruction -> interface .)
    ID              reduce using rule 6 (instruction -> interface .)
    CONST           reduce using rule 6 (instruction -> interface .)
    INTERFACE       reduce using rule 6 (instruction -> interface .)
    IF              reduce using rule 6 (instruction -> interface .)
    WHILE           reduce using rule 6 (instruction -> interface .)
    FOR             reduce using rule 6 (instruction -> interface .)
    BREAK           reduce using rule 6 (instruction -> interface .)
    CONTINUE        reduce using rule 6 (instruction -> interface .)
    RETURN          reduce using rule 6 (instruction -> interface .)
    $end            reduce using rule 6 (instruction -> interface .)
    RBRACE          reduce using rule 6 (instruction -> interface .)


state 7

    (7) instruction -> if .

    VAR             reduce using rule 7 (instruction -> if .)
    ID              reduce using rule 7 (instruction -> if .)
    CONST           reduce using rule 7 (instruction -> if .)
    INTERFACE       reduce using rule 7 (instruction -> if .)
    IF              reduce using rule 7 (instruction -> if .)
    WHILE           reduce using rule 7 (instruction -> if .)
    FOR             reduce using rule 7 (instruction -> if .)
    BREAK           reduce using rule 7 (instruction -> if .)
    CONTINUE        reduce using rule 7 (instruction -> if .)
    RETURN          reduce using rule 7 (instruction -> if .)
    $end            reduce using rule 7 (instruction -> if .)
    RBRACE          reduce using rule 7 (instruction -> if .)


state 8

    (8) instruction -> while .

    VAR             reduce using rule 8 (instruction -> while .)
    ID              reduce using rule 8 (instruction -> while .)
    CONST           reduce using rule 8 (instruction -> while .)
    INTERFACE       reduce using rule 8 (instruction -> while .)
    IF              reduce using rule 8 (instruction -> while .)
    WHILE           reduce using rule 8 (instruction -> while .)
    FOR             reduce using rule 8 (instruction -> while .)
    BREAK           reduce using rule 8 (instruction -> while .)
    CONTINUE        reduce using rule 8 (instruction -> while .)
    RETURN          reduce using rule 8 (instruction -> while .)
    $end            reduce using rule 8 (instruction -> while .)
    RBRACE          reduce using rule 8 (instruction -> while .)


state 9

    (9) instruction -> for .

    VAR             reduce using rule 9 (instruction -> for .)
    ID              reduce using rule 9 (instruction -> for .)
    CONST           reduce using rule 9 (instruction -> for .)
    INTERFACE       reduce using rule 9 (instruction -> for .)
    IF              reduce using rule 9 (instruction -> for .)
    WHILE           reduce using rule 9 (instruction -> for .)
    FOR             reduce using rule 9 (instruction -> for .)
    BREAK           reduce using rule 9 (instruction -> for .)
    CONTINUE        reduce using rule 9 (instruction -> for .)
    RETURN          reduce using rule 9 (instruction -> for .)
    $end            reduce using rule 9 (instruction -> for .)
    RBRACE          reduce using rule 9 (instruction -> for .)


state 10

    (10) instruction -> foreach .

    VAR             reduce using rule 10 (instruction -> foreach .)
    ID              reduce using rule 10 (instruction -> foreach .)
    CONST           reduce using rule 10 (instruction -> foreach .)
    INTERFACE       reduce using rule 10 (instruction -> foreach .)
    IF              reduce using rule 10 (instruction -> foreach .)
    WHILE           reduce using rule 10 (instruction -> foreach .)
    FOR             reduce using rule 10 (instruction -> foreach .)
    BREAK           reduce using rule 10 (instruction -> foreach .)
    CONTINUE        reduce using rule 10 (instruction -> foreach .)
    RETURN          reduce using rule 10 (instruction -> foreach .)
    $end            reduce using rule 10 (instruction -> foreach .)
    RBRACE          reduce using rule 10 (instruction -> foreach .)


state 11

    (11) instruction -> break .

    VAR             reduce using rule 11 (instruction -> break .)
    ID              reduce using rule 11 (instruction -> break .)
    CONST           reduce using rule 11 (instruction -> break .)
    INTERFACE       reduce using rule 11 (instruction -> break .)
    IF              reduce using rule 11 (instruction -> break .)
    WHILE           reduce using rule 11 (instruction -> break .)
    FOR             reduce using rule 11 (instruction -> break .)
    BREAK           reduce using rule 11 (instruction -> break .)
    CONTINUE        reduce using rule 11 (instruction -> break .)
    RETURN          reduce using rule 11 (instruction -> break .)
    $end            reduce using rule 11 (instruction -> break .)
    RBRACE          reduce using rule 11 (instruction -> break .)


state 12

    (12) instruction -> continue .

    VAR             reduce using rule 12 (instruction -> continue .)
    ID              reduce using rule 12 (instruction -> continue .)
    CONST           reduce using rule 12 (instruction -> continue .)
    INTERFACE       reduce using rule 12 (instruction -> continue .)
    IF              reduce using rule 12 (instruction -> continue .)
    WHILE           reduce using rule 12 (instruction -> continue .)
    FOR             reduce using rule 12 (instruction -> continue .)
    BREAK           reduce using rule 12 (instruction -> continue .)
    CONTINUE        reduce using rule 12 (instruction -> continue .)
    RETURN          reduce using rule 12 (instruction -> continue .)
    $end            reduce using rule 12 (instruction -> continue .)
    RBRACE          reduce using rule 12 (instruction -> continue .)


state 13

    (13) instruction -> return .

    VAR             reduce using rule 13 (instruction -> return .)
    ID              reduce using rule 13 (instruction -> return .)
    CONST           reduce using rule 13 (instruction -> return .)
    INTERFACE       reduce using rule 13 (instruction -> return .)
    IF              reduce using rule 13 (instruction -> return .)
    WHILE           reduce using rule 13 (instruction -> return .)
    FOR             reduce using rule 13 (instruction -> return .)
    BREAK           reduce using rule 13 (instruction -> return .)
    CONTINUE        reduce using rule 13 (instruction -> return .)
    RETURN          reduce using rule 13 (instruction -> return .)
    $end            reduce using rule 13 (instruction -> return .)
    RBRACE          reduce using rule 13 (instruction -> return .)


state 14

    (30) assignation -> VAR . ID COLON type EQUAL exp
    (31) assignation -> VAR . ID EQUAL exp
    (32) assignation -> VAR . ID COLON type

    ID              shift and go to state 27


state 15

    (33) assignation -> ID . EQUAL exp
    (34) assignation -> ID . PLUS_EQUAL exp
    (35) assignation -> ID . MINUS_EQUAL exp

    EQUAL           shift and go to state 28
    PLUS_EQUAL      shift and go to state 29
    MINUS_EQUAL     shift and go to state 30


state 16

    (25) assignation_const -> CONST . ID COLON type EQUAL exp
    (26) assignation_const -> CONST . ID EQUAL exp

    ID              shift and go to state 31


state 17

    (27) interface -> INTERFACE . ID LBRACE interface_body RBRACE

    ID              shift and go to state 32


state 18

    (14) if -> IF . LPAREN exp RPAREN block
    (15) if -> IF . LPAREN exp RPAREN block ELSE block
    (16) if -> IF . LPAREN exp RPAREN block ELSE if

    LPAREN          shift and go to state 33


state 19

    (17) while -> WHILE . LPAREN exp RPAREN block

    LPAREN          shift and go to state 34


state 20

    (18) for -> FOR . LPAREN assignation SEMICOLON exp SEMICOLON assignation RPAREN block
    (19) foreach -> FOR . LPAREN VAR ID OF ID RPAREN block

    LPAREN          shift and go to state 35


state 21

    (20) break -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 36


state 22

    (21) continue -> CONTINUE . SEMICOLON

    SEMICOLON       shift and go to state 37


state 23

    (22) return -> RETURN . exp SEMICOLON
    (23) return -> RETURN . SEMICOLON
    (41) exp -> . exp PLUS exp
    (42) exp -> . exp MINUS exp
    (43) exp -> . exp TIMES exp
    (44) exp -> . exp DIVIDE exp
    (45) exp -> . exp MOD exp
    (46) exp -> . MINUS exp
    (47) exp -> . NOT exp
    (48) exp -> . exp COMPARASION exp
    (49) exp -> . exp DIFFERENT exp
    (50) exp -> . exp GREATER exp
    (51) exp -> . exp LESS exp
    (52) exp -> . exp GREATER_EQUAL exp
    (53) exp -> . exp LESS_EQUAL exp
    (54) exp -> . exp AND exp
    (55) exp -> . exp OR exp
    (56) exp -> . NUMBER_LEX
    (57) exp -> . FLOAT_LEX
    (58) exp -> . STRING_LEX
    (59) exp -> . CHAR_LEX
    (60) exp -> . TRUE
    (61) exp -> . FALSE
    (62) exp -> . ID
    (63) exp -> . LPAREN exp RPAREN
    (64) exp -> . exp QUESTION exp COLON exp
    (65) exp -> . ID DOT ID

    SEMICOLON       shift and go to state 39
    MINUS           shift and go to state 40
    NOT             shift and go to state 41
    NUMBER_LEX      shift and go to state 42
    FLOAT_LEX       shift and go to state 43
    STRING_LEX      shift and go to state 44
    CHAR_LEX        shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    ID              shift and go to state 48
    LPAREN          shift and go to state 49

    exp                            shift and go to state 38

state 24

    (1) init -> init instruction .

    VAR             reduce using rule 1 (init -> init instruction .)
    ID              reduce using rule 1 (init -> init instruction .)
    CONST           reduce using rule 1 (init -> init instruction .)
    INTERFACE       reduce using rule 1 (init -> init instruction .)
    IF              reduce using rule 1 (init -> init instruction .)
    WHILE           reduce using rule 1 (init -> init instruction .)
    FOR             reduce using rule 1 (init -> init instruction .)
    BREAK           reduce using rule 1 (init -> init instruction .)
    CONTINUE        reduce using rule 1 (init -> init instruction .)
    RETURN          reduce using rule 1 (init -> init instruction .)
    $end            reduce using rule 1 (init -> init instruction .)
    RBRACE          reduce using rule 1 (init -> init instruction .)


state 25

    (4) instruction -> assignation SEMICOLON .

    VAR             reduce using rule 4 (instruction -> assignation SEMICOLON .)
    ID              reduce using rule 4 (instruction -> assignation SEMICOLON .)
    CONST           reduce using rule 4 (instruction -> assignation SEMICOLON .)
    INTERFACE       reduce using rule 4 (instruction -> assignation SEMICOLON .)
    IF              reduce using rule 4 (instruction -> assignation SEMICOLON .)
    WHILE           reduce using rule 4 (instruction -> assignation SEMICOLON .)
    FOR             reduce using rule 4 (instruction -> assignation SEMICOLON .)
    BREAK           reduce using rule 4 (instruction -> assignation SEMICOLON .)
    CONTINUE        reduce using rule 4 (instruction -> assignation SEMICOLON .)
    RETURN          reduce using rule 4 (instruction -> assignation SEMICOLON .)
    $end            reduce using rule 4 (instruction -> assignation SEMICOLON .)
    RBRACE          reduce using rule 4 (instruction -> assignation SEMICOLON .)


state 26

    (5) instruction -> assignation_const SEMICOLON .

    VAR             reduce using rule 5 (instruction -> assignation_const SEMICOLON .)
    ID              reduce using rule 5 (instruction -> assignation_const SEMICOLON .)
    CONST           reduce using rule 5 (instruction -> assignation_const SEMICOLON .)
    INTERFACE       reduce using rule 5 (instruction -> assignation_const SEMICOLON .)
    IF              reduce using rule 5 (instruction -> assignation_const SEMICOLON .)
    WHILE           reduce using rule 5 (instruction -> assignation_const SEMICOLON .)
    FOR             reduce using rule 5 (instruction -> assignation_const SEMICOLON .)
    BREAK           reduce using rule 5 (instruction -> assignation_const SEMICOLON .)
    CONTINUE        reduce using rule 5 (instruction -> assignation_const SEMICOLON .)
    RETURN          reduce using rule 5 (instruction -> assignation_const SEMICOLON .)
    $end            reduce using rule 5 (instruction -> assignation_const SEMICOLON .)
    RBRACE          reduce using rule 5 (instruction -> assignation_const SEMICOLON .)


state 27

    (30) assignation -> VAR ID . COLON type EQUAL exp
    (31) assignation -> VAR ID . EQUAL exp
    (32) assignation -> VAR ID . COLON type

    COLON           shift and go to state 50
    EQUAL           shift and go to state 51


state 28

    (33) assignation -> ID EQUAL . exp
    (41) exp -> . exp PLUS exp
    (42) exp -> . exp MINUS exp
    (43) exp -> . exp TIMES exp
    (44) exp -> . exp DIVIDE exp
    (45) exp -> . exp MOD exp
    (46) exp -> . MINUS exp
    (47) exp -> . NOT exp
    (48) exp -> . exp COMPARASION exp
    (49) exp -> . exp DIFFERENT exp
    (50) exp -> . exp GREATER exp
    (51) exp -> . exp LESS exp
    (52) exp -> . exp GREATER_EQUAL exp
    (53) exp -> . exp LESS_EQUAL exp
    (54) exp -> . exp AND exp
    (55) exp -> . exp OR exp
    (56) exp -> . NUMBER_LEX
    (57) exp -> . FLOAT_LEX
    (58) exp -> . STRING_LEX
    (59) exp -> . CHAR_LEX
    (60) exp -> . TRUE
    (61) exp -> . FALSE
    (62) exp -> . ID
    (63) exp -> . LPAREN exp RPAREN
    (64) exp -> . exp QUESTION exp COLON exp
    (65) exp -> . ID DOT ID

    MINUS           shift and go to state 40
    NOT             shift and go to state 41
    NUMBER_LEX      shift and go to state 42
    FLOAT_LEX       shift and go to state 43
    STRING_LEX      shift and go to state 44
    CHAR_LEX        shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    ID              shift and go to state 48
    LPAREN          shift and go to state 49

    exp                            shift and go to state 52

state 29
